// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questions snapshot test @questionsLoading is falsy 1`] = `
<div>
  <UNDEFINED
    language="en"
    title="Questions"
  />
  <InfinityLoader
    isLastFetch={false}
    isLoading={false}
    loadNextPaginatedData={[Function]}
  >
    <UNDEFINED
      communityIdFilter={10}
      followedCommunities={null}
      getInitQuestions={[Function]}
      locale="en"
      parentPage="parentPage"
      questionsList={Array []}
      questionsLoading={false}
    />
  </InfinityLoader>
  <UNDEFINED
    followedCommunities={null}
    isFeed={false}
  />
</div>
`;

exports[`Questions snapshot test @questionsLoading is true 1`] = `
<div>
  <UNDEFINED
    language="en"
    title="Questions"
  />
  <InfinityLoader
    isLastFetch={false}
    isLoading={true}
    loadNextPaginatedData={[Function]}
  >
    <UNDEFINED
      communityIdFilter={10}
      followedCommunities={null}
      getInitQuestions={[Function]}
      locale="en"
      parentPage="parentPage"
      questionsList={Array []}
      questionsLoading={true}
    />
  </InfinityLoader>
</div>
`;
